deploy: 6e33fa4c3500b003c88c4bcac4cf8bf477313b58

--- a/drafts/widgets.html
+++ b/drafts/widgets.html
@@ -65,7 +65,7 @@ import {define} from "../_observablehq/client.js";
 import {registerFile, FileAttachment} from "../_observablehq/stdlib.js";
 import {registerTable} from "../_observablehq/stdlib/duckdb.js";
 
-registerFile("./../data/oxford_decarbonisation_data.parquet", {"name":"./../data/oxford_decarbonisation_data.parquet","path":"../_file/data/oxford_decarbonisation_data.28ee7510.parquet","lastModified":1731543891057});
+registerFile("./../data/oxford_decarbonisation_data.parquet", {"name":"./../data/oxford_decarbonisation_data.parquet","path":"../_file/data/oxford_decarbonisation_data.28ee7510.parquet","lastModified":1731550070766});
 registerTable("oxford", FileAttachment("../data/oxford_decarbonisation_data.parquet"));
 
 define({id: "bda9fba7", outputs: ["BudgetAllocator","MiniDecarbModel"], body: async () => {
@@ -225,7 +225,154 @@ const allocations = selected ? getAllocations(selected) : initialAllocations;
 return {allocations};
 }});
 
-define({id: "f7665dd7", inputs: ["start_year","allocations"], outputs: ["addTechConfig","addPriority","listOfTech","config"], body: (start_year,allocations) => {
+define({id: "60b2133e", outputs: ["interventions","createConfigTemplate","addIntervention","removeIntervention"], body: () => {
+let interventions = [];
+
+function createConfigTemplate(start_year, allocations) {
+  return {
+    initial_year: Number(start_year),
+    rolledover_budget: 0,
+    yearly_budgets: allocations.map((item) => item.budget),
+    tech: {},
+    priorities: [],
+  };
+}
+
+// add new intervention
+function addIntervention(
+  techConfig,
+  start_year,
+  allocations,
+  filters = [],
+  priorities = []
+) {
+  const config = createConfigTemplate(start_year, allocations);
+  config.tech = {
+    name: techConfig.name,
+    config: techConfig.config,
+  };
+
+  // Apply filters and priorities
+  filters.forEach((filter) =>
+    config.filters ? config.filters.push(filter) : (config.filters = [filter])
+  );
+  priorities.forEach((priority) => config.priorities.push(priority));
+
+  // psuh to interventions list
+  interventions.push(config);
+  console.log("Intervention added:", config);
+}
+
+// remove intervention
+function removeIntervention(index) {
+  if (index >= 0 && index < interventions.length) {
+    interventions.splice(index, 1);
+    console.log(`Intervention at index ${index} removed.`);
+  } else {
+    console.log("Invalid index.");
+  }
+}
+return {interventions,createConfigTemplate,addIntervention,removeIntervention};
+}});
+
+define({id: "05ccb580", inputs: ["listOfTech","addIntervention","interventions"], outputs: ["addNewIntervention"], body: (listOfTech,addIntervention,interventions) => {
+// handle form submission
+function addNewIntervention() {
+  const start_year = document.getElementById("start_year").value;
+  const techName = document.getElementById("technology").value;
+  const allocations = document
+    .getElementById("allocations")
+    .value.split(",")
+    .map((b) => ({ budget: Number(b.trim()) }));
+
+  // Retrieve techConfig from the selected technology
+  const techConfig = listOfTech[techName];
+
+  // Example filters and priorities (these could be made dynamic too)
+  const filters = [(b) => b.properties["substation_headroom"] >= 500];
+
+  const priorities = [{ name: "substation_capacity_rating", order: "asc" }];
+
+  addIntervention(techConfig, start_year, allocations, filters, priorities);
+
+  // Re-render the interventions list to update the view
+  document.getElementById("interventions-list").innerHTML = interventions
+    .map(
+      (config, index) =>
+        `<li>${config.tech.name} (Start Year: ${config.initial_year}) - <button onclick="removeIntervention(${index})">Remove</button></li>`
+    )
+    .join("");
+}
+return {addNewIntervention};
+}});
+
+define({id: "e479d6a9", inputs: ["interventions","MiniDecarbModel","newBuildings"], outputs: ["runAllInterventions"], body: (interventions,MiniDecarbModel,newBuildings) => {
+function runAllInterventions() {
+  interventions.forEach((config, index) => {
+    const model = new MiniDecarbModel(config, newBuildings);
+    model.runModel();
+    const results = model.getRecap();
+    console.log(`Results for intervention ${index + 1}:`, results);
+  });
+}
+
+// Trigger running all models
+runAllInterventions();
+return {runAllInterventions};
+}});
+
+define({id: "90bd874b", inputs: ["html","addNewIntervention","interventions","display","runAllInterventions"], outputs: ["interventionForm"], body: (html,addNewIntervention,interventions,display,runAllInterventions) => {
+const interventionForm = html`
+  <form>
+    <label
+      >Start Year: <input type="number" id="start_year" value="2025" /></label
+    ><br />
+    <label
+      >Technology:
+      <select id="technology">
+        <option value="ASHP">ASHP</option>
+        <option value="PV">PV</option>
+      </select> </label
+    ><br />
+    <label
+      >Yearly Budget (comma-separated):
+      <input type="text" id="allocations" value="1000,1500,2000" /></label
+    ><br />
+    <button type="button" onclick=${addNewIntervention}>
+      Add Intervention
+    </button>
+  </form>
+
+  <ul id="interventions-list">
+    ${interventions.map(
+      (config, index) =>
+        html`<li>${config.tech.name} (Start Year: ${config.initial_year})</li>`
+    )}
+  </ul>
+`;
+display(interventionForm);
+// display(
+//   html`<button onclick=${remove}>Remove last intervention</button>`
+// );
+display(
+  html`<button onclick=${runAllInterventions}>Run All Interventions</button>`
+);
+return {interventionForm};
+}});
+
+define({id: "d6469914", inputs: ["display","interventions"], body: (display,interventions) => {
+display(interventions);
+}});
+
+define({id: "0a36b6f0", inputs: ["start_year","allocations"], outputs: ["config","addTechConfig","addPriority","listOfTech"], body: (start_year,allocations) => {
+let config = {
+  initial_year: Number(start_year),
+  rolledover_budget: 0,
+  yearly_budgets: allocations.map((item) => item.budget),
+  tech: {},
+  priorities: [],
+};
+
 function addTechConfig(techConfig) {
   config.tech = {
     name: techConfig.name,
@@ -249,7 +396,7 @@ const listOfTech = {
       suitabilityKey: "ashp_suitability",
       labourKey: "ashp_labour",
       materialKey: "ashp_material",
-      savingsKey: "heat_demand", // will be calculated from a lookup and stored in the building data
+      savingsKey: "heat_demand",
     },
   },
   PV: {
@@ -263,18 +410,10 @@ const listOfTech = {
   },
 };
 
-let config = {
-  initial_year: Number(start_year),
-  rolledover_budget: 0,
-  yearly_budgets: allocations.map((item) => item.budget),
-  tech: {},
-  priorities: [],
-};
-
 // update config here
 addTechConfig(listOfTech.ASHP);
 // addPriority("substation_headroom", "asc");
-return {addTechConfig,addPriority,listOfTech,config};
+return {config,addTechConfig,addPriority,listOfTech};
 }});
 
 define({id: "203a2375", inputs: ["display","config"], body: (display,config) => {
@@ -428,7 +567,14 @@ display(Inputs.table(results.allBuildings));
 <div class="observablehq observablehq--block"><!--:d8a2d83b:--></div>
 <div class="observablehq observablehq--block"><!--:79b75dc9:--></div>
 <h2 id="test-new-model" tabindex="-1"><a class="observablehq-header-anchor" href="#test-new-model">Test New Model</a></h2>
-<div class="observablehq observablehq--block"><!--:f7665dd7:--></div>
+<div class="observablehq observablehq--block"><!--:60b2133e:--></div>
+<div class="observablehq observablehq--block"><!--:05ccb580:--></div>
+<div class="observablehq observablehq--block"><!--:e479d6a9:--></div>
+<div class="observablehq observablehq--block"><!--:90bd874b:--></div>
+<div class="observablehq observablehq--block"><!--:d6469914:--></div>
+<h2 id="old-code" tabindex="-1"><a class="observablehq-header-anchor" href="#old-code">Old code</a></h2>
+<!-- --------------------------------------------------------- -->
+<div class="observablehq observablehq--block"><!--:0a36b6f0:--></div>
 <p>Model Configuration:</p>
 <div class="observablehq observablehq--block"><!--:203a2375:--></div>
 <div class="observablehq observablehq--block"><!--:79324e46:--></div>
