--- a/drafts/widgets.html
+++ b/drafts/widgets.html
@@ -65,7 +65,7 @@ import {define} from "../_observablehq/client.js";
 import {registerFile, FileAttachment} from "../_observablehq/stdlib.js";
 import {registerTable} from "../_observablehq/stdlib/duckdb.js";
 
-registerFile("./../data/oxford_decarbonisation_data.parquet", {"name":"./../data/oxford_decarbonisation_data.parquet","path":"../_file/data/oxford_decarbonisation_data.28ee7510.parquet","lastModified":1731550070766});
+registerFile("./../data/oxford_decarbonisation_data.parquet", {"name":"./../data/oxford_decarbonisation_data.parquet","path":"../_file/data/oxford_decarbonisation_data.28ee7510.parquet","lastModified":1731551855974});
 registerTable("oxford", FileAttachment("../data/oxford_decarbonisation_data.parquet"));
 
 define({id: "bda9fba7", outputs: ["BudgetAllocator","MiniDecarbModel"], body: async () => {
@@ -74,14 +74,15 @@ const [{BudgetAllocator}, {MiniDecarbModel}] = await Promise.all([import("../_im
 return {BudgetAllocator,MiniDecarbModel};
 }});
 
-define({id: "ec01b706", inputs: ["Mutable"], outputs: ["useState","selected","setSelected"], body: (Mutable) => {
+define({id: "175a2d06", inputs: ["Mutable"], outputs: ["useState","selected","setSelected","getIntervention","setIntervention"], body: (Mutable) => {
 function useState(value) {
   const state = Mutable(value);
   const setState = (value) => (state.value = value);
   return [state, setState];
 }
 const [selected, setSelected] = useState({});
-return {useState,selected,setSelected};
+const [getIntervention, setIntervention] = useState([]);
+return {useState,selected,setSelected,getIntervention,setIntervention};
 }});
 
 define({id: "d22197ed", inputs: ["sql"], outputs: ["oxford_data"], body: async (sql) => {
@@ -225,8 +226,8 @@ const allocations = selected ? getAllocations(selected) : initialAllocations;
 return {allocations};
 }});
 
-define({id: "60b2133e", outputs: ["interventions","createConfigTemplate","addIntervention","removeIntervention"], body: () => {
-let interventions = [];
+define({id: "73ea30a4", inputs: ["getIntervention","setIntervention"], outputs: ["interventions","createConfigTemplate","addIntervention","removeIntervention"], body: (getIntervention,setIntervention) => {
+let interventions = getIntervention;
 
 function createConfigTemplate(start_year, allocations) {
   return {
@@ -260,14 +261,14 @@ function addIntervention(
 
   // psuh to interventions list
   interventions.push(config);
+  setIntervention(interventions);
   console.log("Intervention added:", config);
 }
 
 // remove intervention
 function removeIntervention(index) {
   if (index >= 0 && index < interventions.length) {
-    interventions.splice(index, 1);
-    console.log(`Intervention at index ${index} removed.`);
+    setIntervention(interventions.filter((_, i) => i !== index));
   } else {
     console.log("Invalid index.");
   }
@@ -275,7 +276,7 @@ function removeIntervention(index) {
 return {interventions,createConfigTemplate,addIntervention,removeIntervention};
 }});
 
-define({id: "05ccb580", inputs: ["listOfTech","addIntervention","interventions"], outputs: ["addNewIntervention"], body: (listOfTech,addIntervention,interventions) => {
+define({id: "0b62225e", inputs: ["listOfTech","addIntervention"], outputs: ["addNewIntervention"], body: (listOfTech,addIntervention) => {
 // handle form submission
 function addNewIntervention() {
   const start_year = document.getElementById("start_year").value;
@@ -288,7 +289,7 @@ function addNewIntervention() {
   // Retrieve techConfig from the selected technology
   const techConfig = listOfTech[techName];
 
-  // Example filters and priorities (these could be made dynamic too)
+  // Example filters and priorities
   const filters = [(b) => b.properties["substation_headroom"] >= 500];
 
   const priorities = [{ name: "substation_capacity_rating", order: "asc" }];
@@ -296,12 +297,12 @@ function addNewIntervention() {
   addIntervention(techConfig, start_year, allocations, filters, priorities);
 
   // Re-render the interventions list to update the view
-  document.getElementById("interventions-list").innerHTML = interventions
-    .map(
-      (config, index) =>
-        `<li>${config.tech.name} (Start Year: ${config.initial_year}) - <button onclick="removeIntervention(${index})">Remove</button></li>`
-    )
-    .join("");
+  // document.getElementById("interventions-list").innerHTML = interventions
+  //   .map(
+  //     (config, index) =>
+  //       `<li>${config.tech.name} (Start Year: ${config.initial_year}) - <button onclick="removeIntervention(${index})">Remove</button></li>`
+  //   )
+  //   .join("");
 }
 return {addNewIntervention};
 }});
@@ -321,7 +322,7 @@ runAllInterventions();
 return {runAllInterventions};
 }});
 
-define({id: "90bd874b", inputs: ["html","addNewIntervention","interventions","display","runAllInterventions"], outputs: ["interventionForm"], body: (html,addNewIntervention,interventions,display,runAllInterventions) => {
+define({id: "44b1c934", inputs: ["html","addNewIntervention","interventions","removeIntervention","display","runAllInterventions"], outputs: ["interventionForm"], body: (html,addNewIntervention,interventions,removeIntervention,display,runAllInterventions) => {
 const interventionForm = html`
   <form>
     <label
@@ -346,7 +347,15 @@ const interventionForm = html`
   <ul id="interventions-list">
     ${interventions.map(
       (config, index) =>
-        html`<li>${config.tech.name} (Start Year: ${config.initial_year})</li>`
+        html`<li>
+          ${config.tech.name} (Start Year: ${config.initial_year}) -
+          <button
+            onclick=${() => removeIntervention(index)}
+            style="border:none; background:none; cursor:pointer;"
+          >
+            <i class="fas fa-trash" style="color:red;"></i>
+          </button>
+        </li>`
     )}
   </ul>
 `;
@@ -557,7 +566,8 @@ display(Inputs.table(results.allBuildings));
 <div id="observablehq-center">
 <main id="observablehq-main" class="observablehq">
 <div class="observablehq observablehq--block"><!--:bda9fba7:--></div>
-<div class="observablehq observablehq--block"><!--:ec01b706:--></div>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<div class="observablehq observablehq--block"><!--:175a2d06:--></div>
 <!-- ------------ Data ------------ -->
 <div class="observablehq observablehq--block"><!--:d22197ed:--></div>
 <div class="observablehq observablehq--block"><!--:2adb250b:--></div>
@@ -567,10 +577,10 @@ display(Inputs.table(results.allBuildings));
 <div class="observablehq observablehq--block"><!--:d8a2d83b:--></div>
 <div class="observablehq observablehq--block"><!--:79b75dc9:--></div>
 <h2 id="test-new-model" tabindex="-1"><a class="observablehq-header-anchor" href="#test-new-model">Test New Model</a></h2>
-<div class="observablehq observablehq--block"><!--:60b2133e:--></div>
-<div class="observablehq observablehq--block"><!--:05ccb580:--></div>
+<div class="observablehq observablehq--block"><!--:73ea30a4:--></div>
+<div class="observablehq observablehq--block"><!--:0b62225e:--></div>
 <div class="observablehq observablehq--block"><!--:e479d6a9:--></div>
-<div class="observablehq observablehq--block"><!--:90bd874b:--></div>
+<div class="observablehq observablehq--block"><!--:44b1c934:--></div>
 <div class="observablehq observablehq--block"><!--:d6469914:--></div>
 <h2 id="old-code" tabindex="-1"><a class="observablehq-header-anchor" href="#old-code">Old code</a></h2>
 <!-- --------------------------------------------------------- -->
