--- a/drafts/widgets.html
+++ b/drafts/widgets.html
@@ -12,7 +12,7 @@
 <link rel="modulepreload" href="../_observablehq/client.js">
 <link rel="modulepreload" href="../_observablehq/runtime.js">
 <link rel="modulepreload" href="../_observablehq/stdlib.js">
-<link rel="modulepreload" href="../_import/components/budgetAllocator.c772f675.js">
+<link rel="modulepreload" href="../_import/components/budgetAllocator.46c04ac3.js">
 <link rel="modulepreload" href="../_import/components/miniDecarbModel.d0583510.js">
 <link rel="modulepreload" href="../_npm/d3@7.9.0/_esm.js">
 <link rel="modulepreload" href="../_observablehq/stdlib/duckdb.js">
@@ -65,11 +65,11 @@ import {define} from "../_observablehq/client.js";
 import {registerFile, FileAttachment} from "../_observablehq/stdlib.js";
 import {registerTable} from "../_observablehq/stdlib/duckdb.js";
 
-registerFile("./../data/oxford_decarbonisation_data.parquet", {"name":"./../data/oxford_decarbonisation_data.parquet","path":"../_file/data/oxford_decarbonisation_data.28ee7510.parquet","lastModified":1731655360947});
+registerFile("./../data/oxford_decarbonisation_data.parquet", {"name":"./../data/oxford_decarbonisation_data.parquet","path":"../_file/data/oxford_decarbonisation_data.28ee7510.parquet","lastModified":1731794591395});
 registerTable("oxford", FileAttachment("../data/oxford_decarbonisation_data.parquet"));
 
 define({id: "bda9fba7", outputs: ["BudgetAllocator","MiniDecarbModel"], body: async () => {
-const [{BudgetAllocator}, {MiniDecarbModel}] = await Promise.all([import("../_import/components/budgetAllocator.c772f675.js"), import("../_import/components/miniDecarbModel.d0583510.js")]);
+const [{BudgetAllocator}, {MiniDecarbModel}] = await Promise.all([import("../_import/components/budgetAllocator.46c04ac3.js"), import("../_import/components/miniDecarbModel.d0583510.js")]);
 
 return {BudgetAllocator,MiniDecarbModel};
 }});
@@ -197,7 +197,7 @@ const allocator = new BudgetAllocator(
 return {allocator};
 }});
 
-define({id: "d8a2d83b", inputs: ["allocationType","allocator","setSelected","display"], outputs: ["initialAllocations","svg","getAllocations"], body: (allocationType,allocator,setSelected,display) => {
+define({id: "03c3314a", inputs: ["allocationType","allocator","setSelected","display"], outputs: ["initialAllocations","svg","getAllocations"], body: (allocationType,allocator,setSelected,display) => {
 let initialAllocations;
 if (allocationType === "linear") {
   initialAllocations = allocator.allocateLinear();
@@ -213,7 +213,9 @@ const { svg, getAllocations } = allocator.visualise(
   (changes) => {
     // console.log("data changed:", changes);
     setSelected(changes);
-  }
+  },
+  400,
+  200
 );
 display(svg);
 return {initialAllocations,svg,getAllocations};
@@ -592,11 +594,230 @@ define({id: "216be021", inputs: ["display","Inputs","results"], body: (display,I
 display(Inputs.table(results.allBuildings));
 }});
 
+define({id: "ab25b938", inputs: ["alert"], outputs: ["openModalBtn","closeModalBtn","confirmBtn","modal"], body: (alert) => {
+const openModalBtn = document.getElementById("openModalBtn");
+const closeModalBtn = document.getElementById("closeModalBtn");
+const confirmBtn = document.getElementById("confirmBtn");
+const modal = document.getElementById("simpleModal");
+
+// Open modal
+openModalBtn.addEventListener("click", () => {
+  modal.style.display = "flex";
+});
+
+// Close modal
+closeModalBtn.addEventListener("click", () => {
+  modal.style.display = "none";
+});
+
+// Confirm action
+confirmBtn.addEventListener("click", () => {
+  alert("Action confirmed!");
+  modal.style.display = "none";
+});
+
+// Close modal if clicking outside modal content
+window.addEventListener("click", (e) => {
+  if (e.target === modal) {
+    modal.style.display = "none";
+  }
+});
+return {openModalBtn,closeModalBtn,confirmBtn,modal};
+}});
+
+define({id: "b23c7be6", outputs: ["toggleButton","hiddenContent"], body: () => {
+const toggleButton = document.getElementById("toggleButton");
+const hiddenContent = document.getElementById("hiddenContent");
+
+toggleButton.addEventListener("click", () => {
+  if (
+    hiddenContent.style.display === "none" ||
+    hiddenContent.style.display === ""
+  ) {
+    hiddenContent.style.display = "block";
+    toggleButton.textContent = "Show Less";
+  } else {
+    hiddenContent.style.display = "none";
+    toggleButton.textContent = "Click More";
+  }
+});
+return {toggleButton,hiddenContent};
+}});
+
+define({id: "fbaf321a", inputs: ["setSelected","prompt"], outputs: ["items","listElement","outputElement"], body: (setSelected,prompt) => {
+const items = [
+  { id: 1, name: "Item 1" },
+  { id: 2, name: "Item 2" },
+  { id: 3, name: "Item 3" },
+  { id: 4, name: "Item 4" },
+  { id: 5, name: "Item 5" },
+];
+
+// References to DOM elements
+const listElement = document.getElementById("selectableList");
+const outputElement = document.getElementById("output");
+
+// Render list items from JavaScript array
+items.forEach((item) => {
+  const listItem = document.createElement("li");
+  listItem.textContent = item.name;
+  listItem.dataset.id = item.id; // Store the ID in a data attribute
+
+  // Add click event listener for selecting
+  listItem.addEventListener("click", () => {
+    // Remove 'selected' class from all items
+    document
+      .querySelectorAll("#selectableList li")
+      .forEach((li) => li.classList.remove("selected"));
+    // Add 'selected' class to clicked item
+    listItem.classList.add("selected");
+    // Display selected ID
+    outputElement.textContent = `Selected ID: ${listItem.dataset.id}`;
+    setSelected(parseInt(listItem.dataset.id, 10));
+  });
+
+  // Create button container
+  const buttonContainer = document.createElement("div");
+  buttonContainer.className = "buttons";
+
+  // Edit button
+  const editButton = document.createElement("button");
+  editButton.innerHTML = '<i class="fas fa-edit"></i>';
+  editButton.addEventListener("click", (e) => {
+    e.stopPropagation(); // Prevent triggering list item click
+    const newName = prompt("Edit item name:", item.name);
+    if (newName) {
+      item.name = newName;
+      listItem.firstChild.textContent = newName;
+    }
+  });
+
+  // Remove button
+  const removeButton = document.createElement("button");
+  removeButton.innerHTML = '<i class="fas fa-trash-alt"></i>';
+  removeButton.addEventListener("click", (e) => {
+    e.stopPropagation(); // Prevent triggering list item click
+    listElement.removeChild(listItem); // Remove from DOM
+  });
+
+  // Append buttons to button container
+  buttonContainer.appendChild(editButton);
+  buttonContainer.appendChild(removeButton);
+
+  // Append button container to list item
+  listItem.appendChild(buttonContainer);
+
+  // Append list item to the list
+  listElement.appendChild(listItem);
+});
+return {items,listElement,outputElement};
+}});
+
+define({id: "d7cd5c5e", inputs: ["display","selected"], body: (display,selected) => {
+// const ul = html`<ul style="list-style: none; padding: 0;"></ul>`;
+
+// // Re-render the list whenever items change
+// function render() {
+//   ul.innerHTML = ""; // Clear previous content
+//   for (const item of items) {
+//     const li = html`<li
+//       style="display: flex; align-items: center; margin-bottom: 5px; padding: 10px;
+//         border: 1px solid #ddd; border-radius: 4px; background-color: #f9f9f9;"
+//     >
+//       <span style="flex-grow: 1; cursor: pointer;"> ${item.name} </span>
+//       <button style="margin-left: 10px;">Edit</button>
+//       <button style="margin-left: 10px;">Remove</button>
+//     </li>`;
+//     ul.appendChild(li);
+//   }
+// }
+
+display(selected);
+}});
+
+define({id: "c3fd9858", inputs: ["items"], outputs: ["renderSelectableList","handleSelected"], body: (items) => {
+function renderSelectableList(
+  items,
+  listElementId,
+  outputElementId,
+  setSelected
+) {
+  // References to DOM elements
+  const listElement = document.getElementById(listElementId);
+  const outputElement = document.getElementById(outputElementId);
+
+  // Clear the existing list if any
+  listElement.innerHTML = "";
+
+  // Render list items from JavaScript array
+  items.forEach((item) => {
+    const listItem = document.createElement("li");
+    listItem.textContent = item.name;
+    listItem.dataset.id = item.id; // Store the ID in a data attribute
+
+    // Add click event listener for selecting
+    listItem.addEventListener("click", () => {
+      // Remove 'selected' class from all items
+      document
+        .querySelectorAll(`#${listElementId} li`)
+        .forEach((li) => li.classList.remove("selected"));
+      // Add 'selected' class to clicked item
+      listItem.classList.add("selected");
+      // Display selected ID
+      outputElement.textContent = `Selected ID: ${listItem.dataset.id}`;
+      setSelected(parseInt(listItem.dataset.id, 10));
+    });
+
+    // Create button container
+    const buttonContainer = document.createElement("div");
+    buttonContainer.className = "buttons";
+
+    // Edit button
+    const editButton = document.createElement("button");
+    editButton.innerHTML = '<i class="fas fa-edit"></i>';
+    // editButton.addEventListener("click", (e) => {
+    //   e.stopPropagation(); // Prevent triggering list item click
+    //   const newName = prompt("Edit item name:", item.name);
+    //   if (newName) {
+    //     item.name = newName;
+    //     listItem.firstChild.textContent = newName;
+    //   }
+    // });
+
+    // Remove button
+    const removeButton = document.createElement("button");
+    removeButton.innerHTML = '<i class="fas fa-trash-alt"></i>';
+    // removeButton.addEventListener("click", (e) => {
+    //   e.stopPropagation(); // Prevent triggering list item click
+    //   listElement.removeChild(listItem); // Remove from DOM
+    // });
+
+    // Append buttons to button container
+    buttonContainer.appendChild(editButton);
+    buttonContainer.appendChild(removeButton);
+
+    // Append button container to list item
+    listItem.appendChild(buttonContainer);
+
+    // Append list item to the list
+    listElement.appendChild(listItem);
+  });
+}
+
+function handleSelected(id) {
+  console.log("Selected ID:", id);
+}
+
+renderSelectableList(items, "selectableList", "output", handleSelected);
+return {renderSelectableList,handleSelected};
+}});
+
 </script>
 <div id="observablehq-center">
 <main id="observablehq-main" class="observablehq">
 <div class="observablehq observablehq--block"><!--:bda9fba7:--></div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<link rel="stylesheet" href="../_file/styles/custom.6c594bd1.css">
 <div class="observablehq observablehq--block"><!--:e9e6659e:--></div>
 <!-- ------------ Data ------------ -->
 <div class="observablehq observablehq--block"><!--:d22197ed:--></div>
@@ -604,7 +825,7 @@ display(Inputs.table(results.allBuildings));
 <h2 id="budget-allocator" tabindex="-1"><a class="observablehq-header-anchor" href="#budget-allocator">Budget Allocator</a></h2>
 <div class="observablehq observablehq--block"><!--:5c004f34:--></div>
 <div class="observablehq observablehq--block"><!--:cc54eba5:--></div>
-<div class="observablehq observablehq--block"><!--:d8a2d83b:--></div>
+<div class="observablehq observablehq--block"><!--:03c3314a:--></div>
 <div class="observablehq observablehq--block"><!--:79b75dc9:--></div>
 <h2 id="test-new-model" tabindex="-1"><a class="observablehq-header-anchor" href="#test-new-model">Test New Model</a></h2>
 <div class="observablehq observablehq--block"><!--:2872498c:--></div>
@@ -626,5 +847,38 @@ display(Inputs.table(results.allBuildings));
 <div class="observablehq observablehq--block"><!--:06fe437e:--></div>
 <p>All suitable buildings, with attribute showing intervention or non-intervention:</p>
 <div class="observablehq observablehq--block"><!--:216be021:--></div>
+<h2 id="modal" tabindex="-1"><a class="observablehq-header-anchor" href="#modal">Modal</a></h2>
+<p><button id="openModalBtn">Open Modal</button></p>
+<div class="modal" id="simpleModal">
+  <div class="modal-content">
+    <div class="modal-header">Are you sure?</div>
+    <p>You are about to confirm this action.</p>
+    <div class="modal-buttons">
+      <button class="btn-confirm" id="confirmBtn">Confirm</button>
+      <button class="btn-close" id="closeModalBtn">Close</button>
+    </div>
+  </div>
+</div>
+<div class="observablehq observablehq--block"><!--:ab25b938:--></div>
+<p><button class="toggle-button" id="toggleButton">Click More</button></p>
+<div class="hidden-content" id="hiddenContent">
+  <h3>More Information</h3>
+  <p>
+    This is additional content that was hidden. You can toggle this visibility
+    by clicking the button again.
+  </p>
+</div>
+<div class="observablehq observablehq--block"><!--:b23c7be6:--></div>
+<h2 id="selectable-list" tabindex="-1"><a class="observablehq-header-anchor" href="#selectable-list">Selectable list</a></h2>
+<ul id="selectableList"></ul>
+<div class="output" id="output">Selected ID: None</div>
+<div class="observablehq observablehq--block"><!--:fbaf321a:--></div>
+<div class="observablehq observablehq--block"><!--:d7cd5c5e:--></div>
+<h2 id="new-test" tabindex="-1"><a class="observablehq-header-anchor" href="#new-test">New test</a></h2>
+<div class="observablehq observablehq--block"><!--:c3fd9858:--></div>
+<div>
+  <ul id="selectableList"></ul>
+  <div id="output">Selected ID: None</div>
+</div>
 </main>
 </div>
