--- a/drafts/tabletest2.html
+++ b/drafts/tabletest2.html
@@ -56,7 +56,7 @@ import {define} from "../_observablehq/client.js";
 import {registerFile, FileAttachment} from "../_observablehq/stdlib.js";
 import {registerTable} from "../_observablehq/stdlib/duckdb.js";
 
-registerFile("./../data/oxford_decarbonisation_data.parquet", {"name":"./../data/oxford_decarbonisation_data.parquet","path":"../_file/data/oxford_decarbonisation_data.28ee7510.parquet","lastModified":1731794591395});
+registerFile("./../data/oxford_decarbonisation_data.parquet", {"name":"./../data/oxford_decarbonisation_data.parquet","path":"../_file/data/oxford_decarbonisation_data.28ee7510.parquet","lastModified":1731830699689});
 registerTable("oxford", FileAttachment("../data/oxford_decarbonisation_data.parquet"));
 
 define({id: "5da2df3a", outputs: ["createTable"], body: async () => {
@@ -124,12 +124,18 @@ const flattenned = buildings.map((p) => ({ ...p }));
 return {buildings,flattenned};
 }});
 
-define({id: "66011008", outputs: ["cols"], body: () => {
+define({id: "3a93e71b", outputs: ["cols"], body: () => {
 const cols = [
   { column: "lsoa", nominals: null },
   {
     column: "insulation_rating",
     ordinals: ["Unknown", "A", "B", "C", "D", "E", "F", "G"],
+  },
+  {
+    column: "insulation_ewall",
+    // ordinals: null,
+    nominals: null,
+    // ordinals: ["Unknown", "A", "B", "C", "D", "E", "F", "G"],
   },
   {
     column: "pv_generation",
@@ -187,7 +193,7 @@ display(selected);
 <h1 id="table-experiments-2" tabindex="-1"><a class="observablehq-header-anchor" href="#table-experiments-2">Table Experiments 2</a></h1>
 <div class="observablehq observablehq--block"><!--:d22197ed:--></div>
 <div class="observablehq observablehq--block"><!--:02502bdf:--></div>
-<div class="observablehq observablehq--block"><!--:66011008:--></div>
+<div class="observablehq observablehq--block"><!--:3a93e71b:--></div>
 <div class="observablehq observablehq--block"><!--:ec01b706:--></div>
 <div class="observablehq observablehq--block"><!--:e124d779:--></div>
 <div class="observablehq observablehq--block"><!--:19721a50:--></div>
